--- a/package.json
+++ b/package.json
@@ -5,14 +5,66 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev-test": "vite --mode test",
+    "dev-pre": "vite --mode pre",
+    "dev-prod": "vite --mode production",
+    "test-build": "vite build --mode test",
+    "pre-build": "vite build --mode pre",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky"
   },
   "dependencies": {
-    "vue": "^3.5.13"
+    "pinia": "^2.3.0",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.6.1",
+    "@commitlint/config-conventional": "^19.6.0",
+    "@eslint/js": "^9.17.0",
     "@vitejs/plugin-vue": "^5.2.1",
-    "vite": "^6.0.5"
+    "eslint": "^9.18.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-vue": "^9.32.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.4.0",
+    "postcss-html": "^1.8.0",
+    "prettier": "3.4.2",
+    "stylelint": "^16.13.2",
+    "stylelint-config-recommended-vue": "^1.5.0",
+    "stylelint-config-standard": "^37.0.0",
+    "vite": "^6.0.5",
+    "vite-plugin-zip-pack": "^1.2.4"
+  },
+  "lint-staged": {
+    "*.{js,jsx,vue}": "eslint",
+    "*.{css,vue}": "stylelint",
+    "**/*": "prettier --write --ignore-unknown"
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ],
+    "rules": {
+      "type-enum": [
+        2,
+        "always",
+        [
+          "build",
+          "chore",
+          "ci",
+          "docs",
+          "feat",
+          "fix",
+          "perf",
+          "refactor",
+          "revert",
+          "style",
+          "test",
+          "foo"
+        ]
+      ]
+    }
   }
 }
