--- a/package.json
+++ b/package.json
@@ -61,8 +61,7 @@
           "refactor",
           "revert",
           "style",
-          "test",
-          "foo"
+          "test"
         ]
       ]
     }
