--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
+    "@vueuse/core": "^12.4.0",
+    "dayjs": "^1.11.13",
+    "element-plus": "^2.9.3",
     "pinia": "^2.3.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
@@ -31,15 +35,18 @@
     "lint-staged": "^15.4.0",
     "postcss-html": "^1.8.0",
     "prettier": "3.4.2",
+    "sass": "^1.83.4",
     "stylelint": "^16.13.2",
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard": "^37.0.0",
+    "unplugin-auto-import": "^19.0.0",
+    "unplugin-vue-components": "^28.0.0",
     "vite": "^6.0.5",
     "vite-plugin-zip-pack": "^1.2.4"
   },
   "lint-staged": {
     "*.{js,jsx,vue}": "eslint",
-    "*.{css,vue}": "stylelint",
+    "*.{css,vue}": "stylelint --fix",
     "**/*": "prettier --write --ignore-unknown"
   },
   "commitlint": {
