--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,5 +1,6 @@
 {
   "extends": ["stylelint-config-standard", "stylelint-config-recommended-vue"],
+  "defaultSeverity": "warning",
   "rules": {},
   "overrides": [
     {
