--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "stylelint": "^16.13.2",
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard": "^37.0.0",
+    "stylelint-config-standard-scss": "^14.0.0",
     "unplugin-auto-import": "^19.0.0",
     "unplugin-vue-components": "^28.0.0",
     "vite": "^6.0.5",
