--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "packageManager": "pnpm@10.2.1",
   "scripts": {
     "dev": "vite",
     "dev-test": "vite --mode test",
